--- a/vue-webpack/index.html
+++ b/vue-webpack/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>photo-stock</title>
+    <title>stock-webpack</title>
   </head>
   <body>
     <div id="app"></div>
